# peloton-to-garmin-py

./: .gitignore  Dockerfile  README.md  config.toml  deploy_linux.sh  docker-compose.yml  pyproject.toml  test_zones.fit
src/p2g/: __init__.py  config.py  convert.py  exercise_mapping.py  garmin.py  main.py  peloton.py
src/p2g_python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test_output/: peloton_cycling_test.fit  peloton_strength_test.fit
tests/: compare_fit.py  test_converter.py  test_garmin_client.py  test_verify_strength.py  test_with_cs_data.py
tests/output/: 20210221_050809_Meditation_Workout_aaa6527fd5a74b7e8e2f8975c6025e60.fit  20210429_174642_Cycling_Workout_3bade6602259414a82576302f9339175.fit  20210518_090540_Walking_Workout_98c617d5c56f4f1ab6fc250afc9aea5f.fit  20210802_014554_Walking_Workout_20739ea34d1741dba9b5f89a6967e85d.fit  20220127_193541_Running_Workout_e5647d3343c34442be1b44d7b4b62a93.fit  20220718_164442_Cycling_Workout_390769bf2c1f41b5a57d1291f8c6c4c2.fit  20220727_165959_Cycling_Workout_23c955d9a1104f91bef1fef3ae9d88cb.fit  20220828_190358_Scenic_Ride_32cb1c294ccd4a5b8416c828b285f0f3.fit  20221204_220506_Rowing_Workout_3a5af153444941c0aa54c52aee4726fa.fit  20230102_212141_Walking_Workout_13afceebe0f74a338f60bf9d70f657ef.fit  20230225_223132_Strength_Workout_ab02df14382243c4a69bc00d3d3526b3.fit  20230303_231748_Strength_Workout_a1d2df4f01964ecaa3051edfd69c369b.fit  20230516_180627_Row_Bootcamp_Workout_162ab6be2cc347a6ae83ab6fa6d88303.fit  20230604_115934_Strength_Workout_bebc02a9a2254f67b08a69f31773a844.fit  (+18 more)
